Rewrote source code to be java 11 compatible. No power, so I have to switch between writing code on phone and laptop